2.0.3
	+ Set as hostmaster@domain the email address to report problems
	  and responsible for that domain
	+ Do not allow set custom NS or MX records to point CNAME records
	  in the same domain
	+ Do not allow to remove last NS record as it is mandatory
	+ Add a default NS record and A record when creating a domain
	+ Just one PTR record is written per IP address to avoid
	  problems in reverse resolution
	+ Remove no longer used zone files
	+ Give support to mix static direct resolution with dynamic one
	+ Give support to mix static reverse resolution with dynamic one
	+ Start init script using -f flag to send the named log to
	  daemon.log file
	+ Give support for dynamic DNS reverse resolution under
	  /var/lib/bind/ directory
2.0.2
	+ Packaging fixes and natty support
2.0.1
	+ Bugfix: Comply apparmor profile by setting the updated dynamic
	  zones under /var/lib/bind
1.5.1
	+ BP: Set @ to all domain-wide records (A, NS) to avoid issues
	  regarding to order in the configuration file
	+ Added support for internal networks allowed to recurse
	  the caching server.
	+ Add support for topdomain record in addDomain method.
	+ Add TCP/53 to dns service
1.3.14
	+ Added migration script for configured modules
	+ Remove migration scripts 0001_import_to_data_table_model.pl
	  0002_fix_active_to_enabled.pl
	+ Move 0003_add_dns_service.pl to 0001_add_dns_service.pl
1.3.13
	+ Added support for dynamic zones to be updated using a shared
	  secret key available at `/etc/bind/keys`. This feature is
	  mainly used by dhcp module to implement dynamic DNS updates.
	+ Fixed structure of menu on language change
1.3.12
	+ Add breadcrumbs to UI
1.3.11
	+ Added report support
1.3.10
	+ Added support for NS records
	+ Check for FQDN in custom MX records
1.3.4
	+ Reversed record for domain IP address added
	+ Fixed bug when removing hostnames
1.3.1
	+ Comment out default configuration of source ports operations to stick
	  to the defaults provided by the  Ubuntu package.
1.1.10