@@ -1,3 +1,5 @@
+HEAD
+	+ Add migration script to generate a TSIG keys for all zones
 2.0.3
 	+ Set as hostmaster@domain the email address to report problems
 	  and responsible for that domain
